v/4.1/abrech/abrechnungslauf.md
# Abrechnungsläufe

Auflistung aller Abrechnungsläufe. Mit einem Rechtsklick kann ein Lauf gelöscht werden oder es können [Pre-Notification](../druckmail/pre-notification.md) ausgeben werden.

## Liste der Abrechnungsläufe

<picture><img src="https://github.com/openjverein/jverein-Book/raw/master/assets/401_AbrechnungslaufListeView.png" alt="" /></picture>

Folgende Menü Einträge sind vorhanden:

* Bearbeiten: Öffnet die Detailansicht für den selektierten Abrechnungslauf
* * Löschen: Löscht den Abrechnungslauf. Dies löscht auch alle vom Abrechnungslauf generierten Rechnungen, Sollbuchungen, Buchungen und Lastschriften
* Sollbuchungen: Zeigt eine Liste der Sollbuchungen die von diesem Abrechnungslauf erzeugt wurden
* Gutschrift erstellen: Öffnet den Dialog zum Erstellen von Gutschriften. Siehe [Gutschrift](../mitglieder/gutschrift.md)
* Pre-Notification: Öffnet den Dialog zum Erzeugen von Pre-Notifications für den selektierten Abrechnungslauf


Auch ein Doppelklick auf den Abrechnungslauf Eintrag zeigt den Abrechnungslauf an.

Über den "Neu" Button können neue Abrechnungsläufe erzeugt werden (siehe [Abrechnung](abrechnung.md)).

Ein Abrechnungslauf kann abgeschlossen werden und ist damit vor versehentlichem Löschen geschützt. Damit diese Funktion genutzt werden kann, muss sie unter Einstellungen->Abrechnung aktiviert werden. Ein einmal abgeschlossener Lauf kann nicht wieder geöffnet werden!

## Abrechnungslauf anzeigen

Der Abrechnungslauf zeigt die Daten des Abrechnungslaufes an.

Die Bemerkung lässt sich editieren.

<picture><img src="https://github.com/openjverein/jverein-Book/raw/master/assets/320_AbrechnungslaufView.png" alt="" /></picture>
